--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,7 @@
-/* RESET -------------------------------------------------- */
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  box-sizing: inherit;
 }
 
 a {
@@ -25,17 +24,51 @@ a::after {
 a:hover::after {
     width: 100%;
 }
+
+h1, h2 {
+  font-family: "Fira Mono", monospace;
+  font-weight: 400;
+  font-size: 1.25rem;
+}
+
+h3, h4 {
+  font-family: "Fira Mono", monospace;
+  font-weight: 400;
+  font-size: 1.0rem;
+	color: rgba(0,0,0,0.7);
+}
+
+.page {
+  max-width: 1200px;      /* controls overall page width */
+	width: 100%;
+  margin-right: auto;        /* centers the column */
+	margin-left: auto;
+	display: block;
+	box-sizing: border-box;
+  /* padding: 0 20px;       /* breathing room on small screens */ 
+padding-left: 250px;
+    padding-right: 250px;
+}
+
+.name {
+	font-size: 2.15rem;
+}
+
 body {
-  --bg: #ece9e4;
-  --text: #111;
+  --bg: #fffff7;
+  --text: rgba(0,0,0,0.84);
   --border: #111;
   --link: #0044cc;
   --link-hover: #000000;
   background: var(--bg);
   color: var(--text);
-  font-family: monospace;
-  	font-size: 18px;
+  font-family: "Fira Mono", monospace;
+  	font-size: 0.875rem;
 	line-height: 1.5;
+
+  align-items: center;
+  justify-content: center;
+  margin: auto;
   padding: 24px;
   min-height: 100vh;
   transition: background 0.3s ease, color 0.3s ease;
@@ -49,10 +82,15 @@ body.dark {
   /* --link: #0044cc; */
   /* --link-hover: #000000; */
   --text: #f2f2f2;
-  --border: #f2f2f2;
+  /* --border: #f2f2f2; */
 
  --link: #7db7ff;
   --link-hover: #ffffff;
+}
+
+.subitem-list {
+	padding: 4px 16px;
+	font-size: 0.875rem;
 }
 
 /* CORNER BUTTONS ---------------------------------------- */
@@ -97,25 +135,30 @@ body.dark {
 .title {
   font-size: 68px;
   line-height: 1;
-  margin-bottom: 20px;
+  /* margin-bottom: 20px; */
 }
 
 .info-panel {
-  border-left: 1px solid var(--border);
-  padding-left: 12px;
+  /* border-left: 1px solid var(--border); */
   margin-top: 20px;
 }
 
 .info-panel .label {
-  font-size: 13px;
+  font-size: 1.25rem;
   opacity: 0.6;
   margin-top: 14px;
 }
 
 .info-panel p {
   margin-top: 4px;
-  font-size: 16px;
+	gap: 12px;
+  font-size: 0.875rem;
   opacity: 0.85;
+}
+
+.university {
+	color: rgba(0,0,0,0.6);
+	margin-bottom: 1.5rem;
 }
 
 /* RIGHT SIDE --------------------------------------------- */
@@ -123,9 +166,20 @@ body.dark {
   width: 45%;
   max-width: 600px;
 }
+.right p {
+	align-items: centered;
+	font-size: 10px;
+}
+
 .hero-photo img {
-	height: 340px;
+
+  max-width: 700px;      /* controls overall page width */
+  margin: auto;        /* centers the column */
+	display: block;
+  padding: 0 20px;       /* breathing room on small screens */
+	height: 15rem;
 	
+	margin-bottom: 2.5rem;
 	
 }
 
@@ -133,7 +187,7 @@ body.dark {
 .bio {
   font-size: 14px;
   line-height: 1.65;
-  border-left: 1px solid var(--border);
+  /* border-left: 1px solid var(--border); */
   padding-left: 18px;
   opacity: 1;
 }
@@ -167,17 +221,14 @@ body.dark {
     line-height: 1.65;
 }
 
-/* BLOCK SECTIONS (SCROLL DOWN) ---------------------------- */
 .block {
-  margin-top: 60px;
+  margin-top: 30px;
 }
 
 .block h2 {
-  font-size: 20px;
-  margin-bottom: 20px;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  border-bottom: 1px solid var(--border);
+  /* font-size: 20px; */
+  margin-bottom: 10px;
+  /* border-bottom: 1px solid var(--border); */
   padding-bottom: 6px;
 }
 .mini-meta {
@@ -219,19 +270,27 @@ body.dark .bottom-fade {
 }
 .paper-item {
   display: flex;
+	flex-direction: column;
+  align-items: flex-start;
+  gap: 12px;
+  margin-bottom: 1rem;
+}
+
+.paper-meta {
+  display: flex;
   align-items: center;
   gap: 12px;
-  margin-bottom: 10px;
 }
 
 .paper-title {
-  font-size: 16px;
+  /* font-size: 16px; */
+
+	font-size: 0.825rem;
   opacity: 0.9;
-  line-height: 1.4;
 }
 
 .paper-links a {
-  font-size: 13px;
+  font-size: 0.875rem;
   opacity: 0.55;
   text-decoration: none;
   padding-left: 4px;
@@ -250,11 +309,11 @@ body.dark .bottom-fade {
     opacity: 1;
     transform: translateX(4px); 
 }
-/* .project-title { */
-/*     display: flex; */
-/*     align-items: center; */
-/*     gap: 8px; */
-/* } */
+.project-title {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
 
 .project-icon {
     font-family: "NerdFontsSymbols NerdFontsSymbols2"; 
@@ -266,7 +325,6 @@ body.dark .bottom-fade {
 .project-icon:hover {
     opacity: 1;
 }
-/* MONITOR PANEL ------------------------------------------------- */
 .monitor {
     position: fixed;
     top: 50%;
@@ -289,12 +347,12 @@ body.dark .bottom-fade {
 }
 
 .monitor.open {
-    right: 40px; /* where it ends up */
+    right: 40px;
 }
 .monitor-tab {
     position: absolute;
     top: 50%;
-    left: -34px; /* sticks out of the left side of the monitor */
+    left: -34px;
     transform: translateY(-50%);
     width: 34px;
     height: 64px;
@@ -303,7 +361,7 @@ body.dark .bottom-fade {
     color: var(--text);
 
     border: 1px solid var(--border);
-    border-right: none; /* attaches cleanly to the monitor panel */
+    border-right: none;
 
     font-size: 28px;
     line-height: 60px;
@@ -371,7 +429,6 @@ body.dark .bottom-fade {
     object-fit: contain;
 }
 
-/* CAPTION + ARROWS BAR */
 .monitor-caption-bar {
     width: 100%;
     display: flex;
@@ -389,7 +446,6 @@ body.dark .bottom-fade {
     margin: 0;
 }
 
-/* Minimal arrow buttons */
 .media-nav.small {
     background: none;
     border: none;
@@ -403,7 +459,7 @@ body.dark .bottom-fade {
 .media-nav.small:hover {
     opacity: 1;
 }
-/* MOBILE -------------------------------------------------- */
+
 @media (max-width: 800px) {
   body {
     padding: 20px;
@@ -418,7 +474,7 @@ body.dark .bottom-fade {
     width: 100%;
   }
 
-  .nier-title {
+  .title {
     font-size: 36px;
   }
 
