added nasa preprint

--- a/styles.css
+++ b/styles.css
@@ -35,19 +35,17 @@ h3, h4 {
   font-family: "Fira Mono", monospace;
   font-weight: 400;
   font-size: 1.0rem;
-	/* color: rgba(0,0,0,0.7); */
   color: var(--text);
 }
 
 .page {
-  max-width: 1200px;      /* controls overall page width */
+  max-width: 1200px;
 	width: 100%;
-  margin-right: auto;        /* centers the column */
+  margin-right: auto;
 	margin-left: auto;
 	display: block;
 	box-sizing: border-box;
-  /* padding: 0 20px;       /* breathing room on small screens */ 
-padding-left: 250px;
+	padding-left: 250px;
     padding-right: 250px;
 }
 
@@ -69,7 +67,7 @@ body {
   color: var(--text);
   font-family: "Fira Mono", monospace;
   	font-size: 0.875rem;
-	line-height: 1.5;
+line-height: 1.5;
 
   align-items: center;
   justify-content: center;
@@ -79,17 +77,10 @@ body {
   transition: background 0.3s ease, color 0.3s ease;
 }
 
-/* DARK MODE */
 body.dark {
   --bg: #1D1E1F;
-  /* --text: #111; */
-  /* --border: #111; */
-  /* --link: #0044cc; */
-  /* --link-hover: #000000; */
-  /* --text: #f2f2f2; */
 	--text-rgb: 242, 242, 242;
   --text: rgba(var(--text-rgb), 1);
-  /* --border: #f2f2f2; */
 
  --link: #7db7ff;
   --link-hover: #ffffff;
@@ -100,7 +91,6 @@ body.dark {
 	font-size: 0.875rem;
 }
 
-/* CORNER BUTTONS ---------------------------------------- */
 .corner-btn,
 .corner-label {
   position: fixed;
@@ -124,7 +114,6 @@ body.dark {
 .bottom-left { bottom: 20px; left: 20px; }
 .bottom-right{ bottom: 20px; right: 20px; }
 
-/* MAIN LAYOUT -------------------------------------------- */
 .layout {
   display: flex;
   gap: 6vw;
@@ -134,7 +123,6 @@ body.dark {
   z-index: 10;
 }
 
-/* LEFT SIDE ---------------------------------------------- */
 .left {
   width: 42%;
 }
@@ -142,11 +130,9 @@ body.dark {
 .title {
   font-size: 68px;
   line-height: 1;
-  /* margin-bottom: 20px; */
 }
 
 .info-panel {
-  /* border-left: 1px solid var(--border); */
   margin-top: 20px;
 }
 
@@ -168,7 +154,6 @@ body.dark {
 	margin-bottom: 1.5rem;
 }
 
-/* RIGHT SIDE --------------------------------------------- */
 .right {
   width: 45%;
   max-width: 600px;
@@ -180,10 +165,10 @@ body.dark {
 
 .hero-photo img {
 
-  max-width: 700px;      /* controls overall page width */
-  margin: auto;        /* centers the column */
+  max-width: 700px;      
+  margin: auto;        
 	display: block;
-  padding: 0 20px;       /* breathing room on small screens */
+  padding: 0 20px;       
 	height: 15rem;
 	
 	margin-bottom: 2.5rem;
@@ -194,11 +179,9 @@ body.dark {
 .bio {
   font-size: 14px;
   line-height: 1.65;
-  /* border-left: 1px solid var(--border); */
   padding-left: 18px;
   opacity: 1;
 }
-/* Single column layout for bio.html */
 .single-column {
     display: flex;
     justify-content: center;
@@ -233,9 +216,7 @@ body.dark {
 }
 
 .block h2 {
-  /* font-size: 20px; */
   margin-bottom: 10px;
-  /* border-bottom: 1px solid var(--border); */
   padding-bottom: 6px;
 }
 .mini-meta {
@@ -249,21 +230,21 @@ body.dark {
   opacity: 0.85;
   font-size: 15px;
 }
-/* BOTTOM FADE GRADIENT TO KEEP UI VISIBLE */
+
 .bottom-fade {
   position: fixed;
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 120px; /* fade height */
+  height: 120px; 
   pointer-events: none;
   z-index: 40;
 
   background: linear-gradient(
     to bottom,
-    rgba(246, 246, 246, 0) 0%, /* top transparent */
-    var(--bg) 85%,            /* near full opacity */
-    var(--bg) 100%            /* fully blended into background */
+    rgba(246, 246, 246, 0) 0%, 
+    var(--bg) 85%,            
+    var(--bg) 100%           
   );
 }
 
@@ -290,7 +271,6 @@ body.dark .bottom-fade {
 }
 
 .paper-title {
-  /* font-size: 16px; */
 
 	font-size: 0.825rem;
   opacity: 0.9;
@@ -350,7 +330,6 @@ body.dark .bottom-fade {
 
     transition: right 0.35s cubic-bezier(.25,.46,.45,.94);
 
-    /* overflow: hidden; /* controlled box */ */
 }
 
 .monitor.open {
@@ -474,6 +453,9 @@ margin-top: 16px;
     max-width: 100%;
   }
 
+	.monitor {
+		display: none;
+	}
   .layout {
     display: block;
     margin-top: 12vh;
